--- a/form-validation.html
+++ b/form-validation.html
@@ -9,15 +9,15 @@
         <div class="registration-Form">
             <h1>Registration Form</h1>
             <form action="#" method="post">
-                <p>User id:</p>
+                <label>User id:</label>
                 <input type="text" name="user id" placeholder="Required, length of 5 to 12 characters">
-                <p>Password:</p>
+                <label>Password:</label>
                 <input type="text" name="password" placeholder="Required, length of 7 to 12 characters">
-                <p>Name:</p>
+                <label>Name:</label>
                 <input type="text" name="name" placeholder="Required, letters only">
-                <p>Address:</p>
+                <label>Address:</label>
                 <input type="text" name="address" placeholder="Optional">
-                <p>Country:</p>
+                <label>Country:</label>
                 <select id="Country">
                      <option value="country">Select Country</option>
                      <option value="south africa">South Africa</option>
@@ -28,17 +28,17 @@
                      <option value="uganda">Uganda</option>
                      <option value="kenya">Kenya</option>
                 </select>
-                <p>Zip Code:</p>
+                <label>Zip Code:</label>
                 <input type="text" name="zip code" placeholder="Required, numeric only">
-                <p>Email:</p>
+                <label>Email:</label>
                 <input type="text" name="Email" placeholder="Required, valid email address only">
                 <p>Sex:</p>
                 <input type="checkbox" name="sex" placeholder="Required"><p>Male</p>
                 <input type="checkbox" name="sex" placeholder="Required"><p>Female</p>
-                <p>Language:</p>
+                <label>Language:</label>
                 <input type="checkbox" name="language" placeholder="Language"><p>English</p>
                 <input type="checkbox" name="language" placeholder="Language"><p>Non-English</p>
-                <p>About: </p>
+                <label>About: </label>
                 <input type="text" name="about" placeholder="Optional">
             </form>
         </div>
