--- a/form-validation.html
+++ b/form-validation.html
@@ -1,46 +1,85 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Form Validation exercise</title>
-        <link rel="stylesheet" type="text/css" href="./Form-Val.css/Formstyling.css">
-    </head>
 
-    <body>
-        <div class="registration-Form">
-            <h1>Registration Form</h1>
-            <form action="#" method="post">
-                <label>User id:</label>
-                <input type="text" name="user id" placeholder="Required, length of 5 to 12 characters">
+<head>
+    <title>Form Validation exercise</title>
+    <link rel="stylesheet" type="text/css" href="./Form-Val.css/Formstyling.css">
+</head>
+
+<body>
+    <div class="registration-Form">
+        <h1>Registration Form</h1>
+        <form action="#" method="post">
+
+           <div class="text-box">
+            <label>User id:</label>
+            <input type="text" name="user id" placeholder="User Id"><span> * Required, length of 5 to 12 characters</span>
+            </div> 
+
+            <div>
                 <label>Password:</label>
-                <input type="text" name="password" placeholder="Required, length of 7 to 12 characters">
+            <input type="text" name="password" placeholder="Password"><span> * Required, length of 7 to 12 characters</span>
+            </div>
+
+            <div class="text-box">
                 <label>Name:</label>
-                <input type="text" name="name" placeholder="Required, letters only">
+            <input type="text" name="name" placeholder="Name"><span> * Required, letters only</span>
+            </div>
+
+            <div class="text-box">
                 <label>Address:</label>
-                <input type="text" name="address" placeholder="Optional">
-                <label>Country:</label>
-                <select id="Country">
-                     <option value="country">Select Country</option>
-                     <option value="south africa">South Africa</option>
-                     <option value="australia">Australia</option>
-                     <option value="usa">USA</option>
-                     <option value="uk">UK</option>
-                     <option value="nigeria">Nigeria</option>
-                     <option value="uganda">Uganda</option>
-                     <option value="kenya">Kenya</option>
-                </select>
-                <label>Zip Code:</label>
-                <input type="text" name="zip code" placeholder="Required, numeric only">
-                <label>Email:</label>
-                <input type="text" name="Email" placeholder="Required, valid email address only">
-                <p>Sex:</p>
-                <input type="checkbox" name="sex" placeholder="Required"><p>Male</p>
-                <input type="checkbox" name="sex" placeholder="Required"><p>Female</p>
-                <label>Language:</label>
-                <input type="checkbox" name="language" placeholder="Language"><p>English</p>
-                <input type="checkbox" name="language" placeholder="Language"><p>Non-English</p>
-                <label>About: </label>
-                <input type="text" name="about" placeholder="Optional">
-            </form>
+            <input type="text" name="address" placeholder="address"><span> * Optional</span>
         </div>
-    </body>
+
+            <div class="text-box">
+                <label>Country:</label>
+            <select id="Country"><span>*Required</span>
+                <option value="country">Select Country</option>
+                <option value="south africa">South Africa</option>
+                <option value="australia">Australia</option>
+                <option value="usa">USA</option>
+                <option value="uk">UK</option>
+                <option value="nigeria">Nigeria</option>
+                <option value="uganda">Uganda</option>
+                <option value="kenya">Kenya</option>
+            </select><span> * required</span>
+            </div>
+
+            <div class="text-box">
+                <label>Zip Code:</label>
+            <input type="text" name="zip code" placeholder="Zip Code"><span> * Required, numeric only</span>
+            </div>
+
+            <div class="text-box">
+                <label>Email:</label>
+            <input type="text" name="Email" placeholder="Required, valid email address only"><span> * Required, valid email address only</span>
+            </div>
+
+            <div class="text-box">
+               <label>Sex:</label>
+            <input type="radio" name="sex" id="male" value="male" required>
+            <label>Male</label>
+            <input type="radio" name="sex" placeholder="female">
+            <label>Female</label><span> * Required</span>
+        </div>
+
+            <div class="text-box">
+                <label>Language:</label>
+            <input type="checkbox" name="language" placeholder="Language" required>
+            <label>English</label>
+            <input type="checkbox" id="language" name="language" placeholder="Language" required>
+            <label>Non-English</label><span> * Required</span>
+        </div>
+
+            <div class="text-box">
+                <label>About: </label>
+            <input type="text" name="about" placeholder="Optional"><span> * Optional</span>
+        </div>
+
+            <input type="hidden" name="_next" value="http://127.0.0.1:5500/form-validation.html">
+            <div><button type="submit">Register</button></div>
+        </form>
+    </div>
+</body>
+
 </html>
